fix the layout of the places in the world

--- a/app/assets/stylesheets/_common-ui/cards/_card_appearance.sass
+++ b/app/assets/stylesheets/_common-ui/cards/_card_appearance.sass
@@ -183,9 +183,10 @@
 
 .card--list__hero
   background: $body-background
-  height: 50px
   margin-right: 10px
+  height: 50px
   width: 50px
+  display: inline-block
 
 .card--list__image
   width: 50px
@@ -206,3 +207,5 @@
   font-weight: bold
   height: 50px
   line-height: 50px
+  display: inline-block
+  vertical-align: top
